force-app/main/default/objects/Restaurant__c/fields/Cuisine_Type__c.field-meta.xml
<CustomField>
    <fullName>Cuisine_Type__c</fullName>
    <label>Cuisine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>