force-app/main/default/objects/Restaurant__c/fields/Restaurant_Image__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Image__c</fullName>
    <label>Restaurant Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>