force-app/main/default/objects/Restaurant__c/fields/Restaurant_Type__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Type__c</fullName>
    <label>Restaurant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>only veg</fullName>
            </value>
            <value>
                <fullName>only non-veg</fullName>
            </value>
            <value>
                <fullName>both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>